[gd_scene load_steps=11 format=3 uid="uid://cd0j4gvgnw6k"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_mvs53"]
[ext_resource type="Theme" uid="uid://ccaj2sh0ljln2" path="res://themes/theme.tres" id="2_rfga0"]
[ext_resource type="Texture2D" uid="uid://4hpagkkqc3r" path="res://gui/background idk.png" id="2_vbbln"]
[ext_resource type="Texture2D" uid="uid://b760iy0b4mhx2" path="res://gui/Sprite sheet for Basic Pack.png" id="3_m4msu"]
[ext_resource type="PackedScene" uid="uid://8mbfjlyh8o6p" path="res://scenes/settings.tscn" id="4_0brn6"]
[ext_resource type="AudioStream" uid="uid://mmrfx71l48py" path="res://sfx/music/Ambient Music.wav" id="5_72ulw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lquct"]
atlas = ExtResource("3_m4msu")
region = Rect2(163, 178, 90, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5vel"]
atlas = ExtResource("3_m4msu")
region = Rect2(259, 180, 90, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_67vhh"]
atlas = ExtResource("3_m4msu")
region = Rect2(163, 178, 90, 27)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0c6or"]
texture = SubResource("AtlasTexture_67vhh")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_mvs53")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(160, 90)
texture = ExtResource("2_vbbln")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.862745, 0.72549, 0.541176, 1)

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -97.0
offset_top = 22.0
offset_right = 97.0002
offset_bottom = 47.0
grow_horizontal = 2
size_flags_horizontal = 4
theme = ExtResource("2_rfga0")
theme_override_font_sizes/font_size = 24
text = "Crescent Moon"
horizontal_alignment = 1

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = 69.0
offset_top = 42.0
offset_right = 249.0
offset_bottom = 46.0

[node name="Play" type="TextureButton" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -40.0
offset_right = 45.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = SubResource("AtlasTexture_lquct")
texture_pressed = SubResource("AtlasTexture_k5vel")

[node name="Label" type="Label" parent="Play"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -17.0
offset_right = 20.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_rfga0")
theme_override_font_sizes/font_size = 18
text = "Play"
horizontal_alignment = 1

[node name="Settings" type="TextureButton" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -12.0
offset_right = 45.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = SubResource("AtlasTexture_lquct")
texture_pressed = SubResource("AtlasTexture_k5vel")

[node name="Label" type="Label" parent="Settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -17.0
offset_right = 20.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_rfga0")
theme_override_font_sizes/font_size = 18
text = "Settings"
horizontal_alignment = 1

[node name="Quit" type="TextureButton" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = 16.0
offset_right = 45.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = SubResource("AtlasTexture_lquct")
texture_pressed = SubResource("AtlasTexture_k5vel")

[node name="Label" type="Label" parent="Quit"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -17.0
offset_right = 20.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_rfga0")
theme_override_font_sizes/font_size = 18
text = "Quit"
horizontal_alignment = 1

[node name="Setting_menu" parent="." instance=ExtResource("4_0brn6")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = -65.0
offset_right = 61.0
offset_bottom = 65.0

[node name="PanelContainer" parent="Setting_menu" index="0"]
theme_override_styles/panel = SubResource("StyleBoxTexture_0c6or")

[node name="VBoxContainer" parent="Setting_menu/PanelContainer" index="0"]
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Master" parent="Setting_menu/PanelContainer/VBoxContainer" index="2"]
min_value = -30.0

[node name="Music" parent="Setting_menu/PanelContainer/VBoxContainer" index="4"]
min_value = -30.0

[node name="SFX" parent="Setting_menu/PanelContainer/VBoxContainer" index="6"]
min_value = -30.0

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_72ulw")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Setting_menu/PanelContainer/VBoxContainer/Return_Button" to="." method="_on_return_button_pressed"]

[editable path="Setting_menu"]
